[package]
authors = ["Setheum Labs<https://github.com/Setheum-Labs>"]
description = "Fungible SERP stablecoins module that implements `SettCurrency`, `SerpMarket,and `SerpTes` traits."
edition = "2018"
homepage = "https://setheum.xyz"
license = "Apache-2.0 License"
name = "stp258-serp"
version = "0.5.3"
repository = "https://github.com/Setheum-Labs/Setheum/"
documentation = "https://wiki.setheum.xyz"
readme = "README.md"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
serp-traits = { version = '0.5.3', default-features = false }

funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

num-rational = { default-features = false, version = '0.4.0' }
num-traits = { version = "0.2.14", default-features = false }
fixed = { default-features = false, version = '1.6.0' }
frame-benchmarking-cli = "3.0.0"

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"
pallet-treasury = "3.0.0"
pallet-elections-phragmen = "3.0.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"serp-traits/std",
    "num-rational/std",
	"num-traits/std",
   	"fixed/std",
]
